adding base container... and making sure i contribute something today >:)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <!-- I am putting a comment here for shits and giggles -->
     <body>
+        <div class="calc-container"></div>
     </body>
     <script src="script.js"></script>
 </html>
