created intial operator functions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <!-- I am putting a comment here for shits and giggles -->
     <body>
-        <div class="calc-container"></div>
+        <div class="calc-container">
+            <div class="numbers"></div>
+        </div>
     </body>
     <script src="script.js"></script>
 </html>
