--- a/index.html
+++ b/index.html
@@ -7,8 +7,27 @@
     </head>
     <!-- I am putting a comment here for shits and giggles -->
     <body>
+        <h2 class="display"></h2>
         <div class="calc-container">
-            <div class="numbers"></div>
+            <div class="number-container">
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+            </div>
+            <div class="operator-container">
+                <button class="operator">+</button>
+                <button class="operator">-</button>
+                <button class="operator">/</button>
+                <button class="operator">*</button>
+                <button class="operator">Equals</button>
+                <button class="operator">Clear</button>
+            </div>
         </div>
     </body>
     <script src="script.js"></script>
